--- a/style.scss
+++ b/style.scss
@@ -9,11 +9,7 @@ body {
 }
 
 .function-menu {
-    width: 300px;
     background-color: rgb(236, 236, 236);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
 }
 
 .adding-selected-school-subjects {
@@ -30,8 +26,114 @@ body {
     }
 }
 
+.content {
+    .table {
+        display: flex;
+        width: 100%;
+        padding: 5px 0px 5px 0px;
+        align-items: center;
+        .name-of-the-school-subject {
+            margin-left: 10px;
+            display: flex;
+            justify-content: space-between;
+            background-color: #006CCB;
+            color: white;
+            min-width: 300px;
+            padding: 12px;
+            font-size: 19px;
+            border-radius: 5px;
+        }
+        .button-container {
+            display: flex;
+            .edit-name {
+                font-size: 14px;
+                background-color: #02437D;
+                color: white;
+                border: none;
+                display: flex;
+                width: 25px;
+                justify-content: center;
+                cursor: pointer;
+                border-radius: 5px;
+                align-items: center;
+                margin: 0px 2px 0px 2px;
+            }
+            .removing-a-school-subject {
+                font-size: 20px;
+                background-color: #02437D;
+                color: white;
+                border: none;
+                display: flex;
+                width: 25px;
+                justify-content: center;
+                cursor: pointer;
+                border-radius: 5px;
+                margin: 0px 2px 0px 2px;
+            }
+            .removing-a-school-subject:hover {
+                background-color: #01325e;
+            }
+        }
+
+        // .rating-and-weight {
+        //     display: flex;
+        //     flex-direction: column;
+        //     width: 100px;
+        //     margin-left: 10px;
+        //     .school-grade-value {
+        //         border: none;
+        //         border: 2px solid #0099ff;
+        //         height: 50%;
+        //         text-align: center;
+        //         font-size: 15px;
+        //         background-color: #80ccff9c;
+        //     }
+        //     .weight-of-the-rating-value {
+        //         font-size: 15px;
+        //         text-align: center;
+        //         border: none;
+        //         height: 50%;
+        //         border: 1px 2px 0px 1px solid #0099ff;
+        //         border-bottom: 2px solid #0099ff;
+        //         border-right: 2px solid #0099ff;
+        //         border-left: 2px solid #0099ff;
+        //         background-color: #80ccff9c;
+        //     }
+        //     input::placeholder {
+        //         color: #006CCB;
+        //     }
+        // }
+        .adding-btn {
+            background-color: #0099ff;
+            color: white;
+            border-radius: 50%;
+            min-width: 45px;
+            height: 45px;
+            font-size: 35px;
+            border: none;
+            margin-left: 10px;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .adding-btn:hover {
+            background-color: #278ed2;;
+        }
+    }
+}
+
+.menu-bottom-content {
+    margin: 0px 10px 0px 10px;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .adding-school-subjects {
-    margin: 0px 0px 10px 0px;
+    margin: 0px 0px 5px 0px;
     .adding-school-subjects-container {
         display: flex;
         width: fit-content;
@@ -61,7 +163,9 @@ body {
     font-size: 17px;
     border-radius: 10px;
     padding: 10px;
+    width: 300px;
     .average-of-all-subjects-text {
+        text-align: center;
         margin-bottom: 8px;
     }
     .average-of-all-subjects-result {
