--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,20 @@ body {
 
 }
 
+.message {
+    display: none;
+    position: fixed;
+    margin: 15px;
+    width: 250px;
+    background-color: #ac1d35;
+    border: 1px solid red;
+    border-radius: 5px;
+    color: white;
+    font-size: 15px;
+    text-align: left;
+    padding: 15px;
+}
+
 .function-menu {
     background-color: rgb(236, 236, 236);
 }
@@ -39,7 +53,7 @@ body {
             background-color: #006CCB;
             color: white;
             min-width: 300px;
-            padding: 12px;
+            padding: 15px;
             font-size: 19px;
             border-radius: 5px;
         }
@@ -59,7 +73,7 @@ body {
                 margin: 0px 2px 0px 2px;
             }
             .removing-a-school-subject {
-                font-size: 20px;
+                font-size: 14px;
                 background-color: #02437D;
                 color: white;
                 border: none;
@@ -68,6 +82,7 @@ body {
                 justify-content: center;
                 cursor: pointer;
                 border-radius: 5px;
+                align-items: center;
                 margin: 0px 2px 0px 2px;
             }
             .removing-a-school-subject:hover {
@@ -75,34 +90,34 @@ body {
             }
         }
 
-        // .rating-and-weight {
-        //     display: flex;
-        //     flex-direction: column;
-        //     width: 100px;
-        //     margin-left: 10px;
-        //     .school-grade-value {
-        //         border: none;
-        //         border: 2px solid #0099ff;
-        //         height: 50%;
-        //         text-align: center;
-        //         font-size: 15px;
-        //         background-color: #80ccff9c;
-        //     }
-        //     .weight-of-the-rating-value {
-        //         font-size: 15px;
-        //         text-align: center;
-        //         border: none;
-        //         height: 50%;
-        //         border: 1px 2px 0px 1px solid #0099ff;
-        //         border-bottom: 2px solid #0099ff;
-        //         border-right: 2px solid #0099ff;
-        //         border-left: 2px solid #0099ff;
-        //         background-color: #80ccff9c;
-        //     }
-        //     input::placeholder {
-        //         color: #006CCB;
-        //     }
-        // }
+        .rating-and-weight {
+            display: flex;
+            flex-direction: column;
+            width: 100px;
+            margin-left: 10px;
+            .school-grade-value {
+                border: none;
+                border: 2px solid #0099ff;
+                height: 50%;
+                text-align: center;
+                font-size: 15px;
+                background-color: #80ccff9c;
+            }
+            .weight-of-the-rating-value {
+                font-size: 15px;
+                text-align: center;
+                border: none;
+                height: 50%;
+                border: 1px 2px 0px 1px solid #0099ff;
+                border-bottom: 2px solid #0099ff;
+                border-right: 2px solid #0099ff;
+                border-left: 2px solid #0099ff;
+                background-color: #80ccff9c;
+            }
+            input::placeholder {
+                color: #006CCB;
+            }
+        }
         .adding-btn {
             background-color: #0099ff;
             color: white;
@@ -111,15 +126,60 @@ body {
             height: 45px;
             font-size: 35px;
             border: none;
-            margin-left: 10px;
             cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
+            right: 26px;
         }
         .adding-btn:hover {
-            background-color: #278ed2;;
+            background-color: #278ed2;
         }
+        .school-grade {
+            background-color: rgb(64, 127, 209);
+            color: white;
+            min-width: 57px;
+            min-height: 57px;
+            border-radius: 5px;
+            max-height: 50px;
+            display: inline-block;
+            .school-grade-value {
+                font-size: 27px;
+                text-align: center;
+                border-bottom: 2px solid white;
+                height: 35px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .weight-school-grade-value {
+                position: relative;
+                left: 8px;
+                font-size: 11px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                top: 3px;
+            }
+        }
+        .removing-school-grades {
+            background-color: #02437D;
+            border: none;
+            color: white;
+            height: 17px;
+            width: 17px;
+            cursor: pointer;
+            font-size: 15px;
+            position: relative;
+            float: right;
+            bottom: 37px;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+        }
+
     }
 }
 
@@ -145,6 +205,10 @@ body {
             height: 35px;
             font-size: 17px;
             border: none;
+            width: 210px;
+        }
+        .adding-school-subjects-input::placeholder {
+            text-align: center;
         }
         .adding-school-subjects-btn {
             border: none;
@@ -170,7 +234,6 @@ body {
     }
     .average-of-all-subjects-result {
         background-color: #80ccff9c;
-        margin-left: 5px;
         padding: 0px 10px 0px 10px;
         display: flex;
         justify-content: center;
