--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-color: #fafafa;
+}
+
 .message {
   display: none;
   position: fixed;
@@ -18,15 +22,71 @@
   padding: 15px;
 }
 
-.function-menu {
-  background-color: #ececec;
+.choice-of-school-subjects-container {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.555);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.adding-selected-school-subjects {
-  margin: 10px 0px 10px 0px;
+.choice-of-school-subjects-container .choice-of-school-subjects {
+  height: 700px;
+  max-width: 600px;
+  background-color: white;
+  border-radius: 10px;
+  margin: 0px 10px 0px 10px;
 }
 
-.adding-selected-school-subjects .adding-selected-school-subjects-btn {
+.choice-of-school-subjects-container .choice-of-school-subjects h2 {
+  color: #3f3f3f;
+  text-align: center;
+  margin: 10px 15px 10px 15px;
+}
+
+.choice-of-school-subjects-container .choice-of-school-subjects label {
+  font-size: 24px;
+  width: 150px;
+}
+
+.choice-of-school-subjects-container .choice-of-school-subjects .selection-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #0099ff;
+  margin: 20px 40px 20px 40px;
+}
+
+.choice-of-school-subjects-container .choice-of-school-subjects .selection-list .selection-list-elements {
+  margin: 2px 0px 2px 0px;
+}
+
+.choice-of-school-subjects-container .choice-of-school-subjects .selection-list .selection-list-elements .selection-list-checkbox {
+  cursor: pointer;
+  font-size: 20px;
+  width: 20px;
+}
+
+.adding-selected-school-subjects-content .adding-selected-school-subjects {
+  margin: 10px 0px 0px 10px;
+}
+
+.adding-selected-school-subjects-content .adding-selected-school-subjects .adding-selected-school-subjects-btn {
   background-color: #0099ff;
   color: white;
   border: none;
@@ -196,6 +256,7 @@
   border-radius: 5px;
   max-height: 50px;
   display: inline-block;
+  margin: 0px 3px 0px 3px;
 }
 
 .content .table .school-grade .school-grade-value {
