--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-
+    background-color: #fafafa;
 }
 
 .message {
@@ -22,21 +22,65 @@ body {
     padding: 15px;
 }
 
-.function-menu {
-    background-color: rgb(236, 236, 236);
+.choice-of-school-subjects-container {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.555);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .choice-of-school-subjects {
+        height: 700px;
+        max-width: 600px;
+        background-color: white;
+        border-radius: 10px;
+        margin: 0px 10px 0px 10px;
+        h2 {
+            color: #3f3f3f;
+            text-align: center;
+            margin: 10px 15px 10px 15px;
+        }
+        label {
+            font-size: 24px;
+            width: 150px;
+        }
+        .selection-list {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            color: #0099ff;
+            margin: 20px 40px 20px 40px;
+            .selection-list-elements {
+                margin: 2px 0px 2px 0px;
+                .selection-list-checkbox {
+                    cursor: pointer;
+                    font-size: 20px;
+                    width: 20px;
+                }
+            }
+        }
+    }
 }
 
-.adding-selected-school-subjects {
-    margin: 10px 0px 10px 0px;
-    .adding-selected-school-subjects-btn {
-        background-color: #0099ff;
-        color: white;
-        border: none;
-        border-radius: 10px;
-        padding: 10px 10px 10px 10px;
-        font-size: 17px;
-        cursor: pointer;
+.function-menu {
 
+}
+
+.adding-selected-school-subjects-content {
+
+    .adding-selected-school-subjects {
+        margin: 10px 0px 0px 10px;
+        .adding-selected-school-subjects-btn {
+            background-color: #0099ff;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 10px 10px 10px 10px;
+            font-size: 17px;
+            cursor: pointer;
+    
+        }
     }
 }
 
@@ -144,6 +188,7 @@ body {
             border-radius: 5px;
             max-height: 50px;
             display: inline-block;
+            margin: 0px 3px 0px 3px;
             .school-grade-value {
                 font-size: 27px;
                 text-align: center;
