improvement of DOM structure generation

--- a/style.scss
+++ b/style.scss
@@ -181,7 +181,6 @@ body {
             background-color: #278ed2;
         }
         .school-grade {
-            background-color: rgb(64, 127, 209);
             color: white;
             min-width: 57px;
             min-height: 57px;
@@ -209,7 +208,7 @@ body {
             }
         }
         .removing-school-grades {
-            background-color: #02437D;
+            background-color: #464646b0;
             border: none;
             color: white;
             height: 17px;
