--- a/style.css
+++ b/style.css
@@ -248,6 +248,39 @@ body {
   background-color: #278ed2;
 }
 
+.content .table .counting-result {
+  border: 2px solid #0099ff;
+  height: 35px;
+  width: 70px;
+  border-radius: 4px;
+  background-color: #80ccff9c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 10px;
+}
+
+.content .table .counting-result .counting-result-span {
+  font-size: 13px;
+  color: #0099ff;
+}
+
+.content .table .counting-result .counting-result-value {
+  font-size: 14px;
+  color: #0099ff;
+  font-weight: 900;
+}
+
 .content .table .school-grade {
   color: white;
   min-width: 57px;
