--- a/style.scss
+++ b/style.scss
@@ -180,6 +180,28 @@ body {
         .adding-btn:hover {
             background-color: #278ed2;
         }
+
+        .counting-result {
+            border: 2px solid #0099ff;
+            height: 35px;
+            width: 70px;
+            border-radius: 4px;
+            background-color: #80ccff9c;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-right: 10px;
+            .counting-result-span {
+                font-size: 13px;
+                color: #0099ff;
+            }
+            .counting-result-value {
+                font-size: 14px;
+                color: #0099ff;
+                font-weight: 900;
+            }
+        }
         .school-grade {
             color: white;
             min-width: 57px;
