--- a/style.css
+++ b/style.css
@@ -22,6 +22,71 @@ body {
   padding: 15px;
 }
 
+.notification {
+  display: none;
+}
+
+.notification-active {
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.555);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.notification-active .notification-container {
+  max-width: 700px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 0px 8px 0px 8px;
+}
+
+.notification-active .notification-container h2 {
+  text-align: center;
+  margin-top: 10px;
+  color: #0099ff;
+}
+
+.notification-active .notification-container p {
+  color: #3d3d3d;
+  margin: 20px;
+  text-align: center;
+}
+
+.notification-active .notification-container .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 15px;
+}
+
+.notification-active .notification-container .btn-container .btn-container-style {
+  margin: 0px 5px 0px 5px;
+  background-color: #0099ff;
+  border: none;
+  color: white;
+  padding: 5px 12px 5px 12px;
+  font-size: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.notification-active .notification-container .btn-container .btn-container-style:hover {
+  background-color: #0081d6;
+}
+
 .choice-of-school-subjects-container {
   width: 100%;
   height: 100vh;
@@ -83,7 +148,7 @@ body {
 }
 
 .adding-selected-school-subjects-content .adding-selected-school-subjects {
-  margin: 10px 0px 0px 10px;
+  margin: 0px 0px 0px 10px;
 }
 
 .adding-selected-school-subjects-content .adding-selected-school-subjects .adding-selected-school-subjects-btn {
@@ -129,7 +194,7 @@ body {
   display: flex;
 }
 
-.content .table .button-container .edit-name {
+.content .table .button-container .fa-pencil-alt {
   font-size: 14px;
   background-color: #02437D;
   color: white;
@@ -149,7 +214,7 @@ body {
   margin: 0px 2px 0px 2px;
 }
 
-.content .table .button-container .removing-a-school-subject {
+.content .table .button-container .fa-trash-alt {
   font-size: 14px;
   background-color: #02437D;
   color: white;
@@ -169,7 +234,11 @@ body {
   margin: 0px 2px 0px 2px;
 }
 
-.content .table .button-container .removing-a-school-subject:hover {
+.content .table .button-container .fa-trash-alt:hover {
+  background-color: #01325e;
+}
+
+.content .table .button-container .fa-pencil-alt:hover {
   background-color: #01325e;
 }
 
