--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   color: white;
   font-size: 15px;
   text-align: left;
+  z-index: 100;
   padding: 15px;
 }
 
@@ -85,6 +86,106 @@ body {
 
 .notification-active .notification-container .btn-container .btn-container-style:hover {
   background-color: #0081d6;
+}
+
+.changing-the-name-of-school-subjects {
+  display: none;
+}
+
+.changing-the-name-of-school-subjects-active {
+  display: block;
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.555);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container {
+  max-width: 700px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 0px 8px 0px 8px;
+  padding: 30px 40px 30px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container h2 {
+  text-align: center;
+  margin: 10px 0px 10px 0px;
+  color: #0099ff;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container input {
+  width: 200px;
+  height: 25px;
+  border: 1px solid #0099ff;
+  border-radius: 5px;
+  color: #0099ff;
+  padding-left: 5px;
+  font-size: 16px;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container input::-webkit-input-placeholder {
+  padding-left: 5px;
+  color: #0099ff;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container input:-ms-input-placeholder {
+  padding-left: 5px;
+  color: #0099ff;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container input::-ms-input-placeholder {
+  padding-left: 5px;
+  color: #0099ff;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container input::placeholder {
+  padding-left: 5px;
+  color: #0099ff;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container button {
+  color: white;
+  border: none;
+  padding: 5px 10px 5px 10px;
+  background-color: #0099ff;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 13px;
+  margin: 5px 3px 5px 3px;
+}
+
+.changing-the-name-of-school-subjects-active .changing-the-name-of-school-subjects-container .changing-button-container button:hover {
+  background-color: #0072bd;
 }
 
 .choice-of-school-subjects-container {
