--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body {
     color: white;
     font-size: 15px;
     text-align: left;
+    z-index: 100;
     padding: 15px;
 }
 
@@ -68,6 +69,68 @@ body {
                 background-color: #0081d6;
             }
         }
+    }
+}
+
+.changing-the-name-of-school-subjects {
+    display: none;
+}
+
+.changing-the-name-of-school-subjects-active {
+    display: block;
+    z-index: 10;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.555);
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    .changing-the-name-of-school-subjects-container {
+        max-width: 700px;
+        background-color: white;
+        border-radius: 5px;
+        margin: 0px 8px 0px 8px;
+        padding: 30px 40px 30px 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h2 {
+            text-align: center;
+            margin: 10px 0px 10px 0px;
+            color: #0099ff;
+        }
+        .changing-button-container {
+            display: flex;
+            align-items: center;
+            input {
+                width: 200px;
+                height: 25px;
+                border: 1px solid #0099ff;
+                border-radius: 5px;
+                color: #0099ff;
+                padding-left: 5px;
+                font-size: 16px;
+            }
+            input::placeholder {
+                padding-left: 5px;
+                color: #0099ff;
+            }
+            button {
+                color: white;
+                border: none;
+                padding: 5px 10px 5px 10px;
+                background-color: #0099ff;
+                cursor: pointer;
+                border-radius: 5px;
+                font-size: 13px;
+                margin: 5px 3px 5px 3px;
+            }
+            button:hover {
+                background-color: #0072bd;;
+            }
+        }
+        
     }
 }
 
