--- a/style.scss
+++ b/style.scss
@@ -73,10 +73,12 @@ body {
 }
 
 .changing-the-name-of-school-subjects {
+    overflow: auto;
     display: none;
 }
 
 .changing-the-name-of-school-subjects-active {
+    overflow: auto;
     display: block;
     z-index: 10;
     width: 100%;
@@ -135,6 +137,11 @@ body {
 }
 
 .choice-of-school-subjects-container {
+    display: none;
+}
+
+.choice-of-school-subjects-container-active {
+    z-index: 100;
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -149,7 +156,7 @@ body {
         border-radius: 10px;
         margin: 0px 10px 0px 10px;
         h2 {
-            color: #3f3f3f;
+            color: #0099ff;
             text-align: center;
             margin: 10px 15px 10px 15px;
         }
@@ -161,15 +168,35 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            color: #0099ff;
+            color: #424242;
             margin: 20px 40px 20px 40px;
             .selection-list-elements {
+                background-color: #2195f30c;
+                border-radius: 10px;
                 margin: 2px 0px 2px 0px;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
                 .selection-list-checkbox {
                     cursor: pointer;
                     font-size: 20px;
                     width: 20px;
+                    height: 20px;
                 }
+            }
+        }
+        .selection-list-btn-container {
+            margin-top: 15px;
+            display: flex;
+            justify-content: space-evenly;
+            .selection-list-btn {
+                border: none;
+                color: white;
+                font-size: 15px;
+                background-color: #0099ff;
+                padding: 5px 10px 5px 10px;
+                border-radius: 5px;
+                cursor: pointer;
             }
         }
     }
