--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ body {
     text-align: left;
     z-index: 100;
     padding: 15px;
+    right: 0;
 }
 
 .notification {
@@ -97,6 +98,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-align: center;
         h2 {
             text-align: center;
             margin: 10px 0px 10px 0px;
@@ -105,6 +107,8 @@ body {
         .changing-button-container {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
             input {
                 width: 200px;
                 height: 25px;
@@ -134,6 +138,11 @@ body {
         }
         
     }
+    @media (max-width: 430px) {
+        .changing-the-name-of-school-subjects-container {
+            padding: 20px 20px 20px 20px;
+        }
+    }
 }
 
 .choice-of-school-subjects-container {
@@ -150,10 +159,12 @@ body {
     justify-content: center;
     align-items: center;
     .choice-of-school-subjects {
+        height: 100vh;
         max-width: 600px;
+        overflow: auto;
         background-color: white;
         border-radius: 10px;
-        margin: 0px 10px 0px 10px;
+        margin: 10px 10px 0px 10px;
         h2 {
             color: #0099ff;
             text-align: center;
@@ -172,7 +183,7 @@ body {
             .selection-list-elements {
                 background-color: #2195f30c;
                 border-radius: 10px;
-                margin: 2px 0px 2px 0px;
+                margin: 3px 0px 3px 0px;
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
@@ -183,6 +194,9 @@ body {
                     height: 20px;
                 }
             }
+        }
+        @media (max-width: 350px) {
+            margin: 20px;
         }
         .selection-list-btn-container {
             margin-top: 15px;
@@ -467,5 +481,77 @@ body {
         align-items: center;
         font-size: 20px;
         border-radius: 5px;
+    }
+}
+
+.analysis-number-grades-container {
+    // margin: 15px;
+    // .analysis-number-grades {
+    //     height: 80px;
+    //     width: 90px;
+    //     border-radius: 15px;
+    //     -webkit-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //     -moz-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //     box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //     display: flex;
+    //     justify-content: center;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     color: rgb(97, 97, 97);
+    //     .analysis-container {
+    //         background-color: rgb(212, 66, 66);
+    //         height: 40px;
+    //         width: 55px;
+    //         border-radius: 10px;
+    //         display: flex;
+    //         flex-direction: column;
+    //         justify-content: center;
+    //         align-items: center;
+    //         color: white;
+    //         position: relative;
+    //         bottom: 10px;
+    //         -webkit-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //         -moz-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //         box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+    //         .analysis-grade-text {
+    //             font-size: 14px;
+    //             color: white;
+    //         }
+    //     }
+    // }
+
+
+
+    .analysis-number-grades {
+        margin: 10px 10px 0px 20px;
+        display: flex;
+        align-items: center;
+        width: 200px;
+        height: 50px;
+        -webkit-box-shadow: 0px 0px 10px 0px rgb(226, 226, 226);
+        -moz-box-shadow: 0px 0px 10px 0px rgb(226, 226, 226);
+        box-shadow: 0px 0px 10px 0px rgb(226, 226, 226);
+        border-radius: 10px;
+        justify-content: space-between;
+        .analysis-container {
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            // background-color: rgb(212, 66, 66);
+            height: 40px;
+            width: 55px;
+            position: relative;
+            right: 10px;
+            -webkit-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+            -moz-box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+            box-shadow: 0px 0px 10px 0px rgba(234,234,234,1);
+            border-radius: 10px;
+            font-size: 14px;
+        }
+        .analysis-grade-value {
+            margin: 0px 10px 0px 10px;
+        }
     }
 }
