--- a/style.scss
+++ b/style.scss
@@ -256,6 +256,9 @@ body {
             font-size: 19px;
             border-radius: 5px;
             margin: 5px 0px 5px 10px;
+            h3 {
+                max-width: 242px;
+            }
         }
         @media (max-width: 360px) {
             .name-of-the-school-subject {
