--- a/style.css
+++ b/style.css
@@ -225,12 +225,12 @@ body {
 }
 
 .choice-of-school-subjects-container-active .choice-of-school-subjects {
-  height: 100vh;
+  height: 96%;
   max-width: 600px;
   overflow: auto;
   background-color: white;
   border-radius: 10px;
-  margin: 10px 10px 0px 10px;
+  margin: 10px;
 }
 
 .choice-of-school-subjects-container-active .choice-of-school-subjects h2 {
@@ -278,12 +278,6 @@ body {
   font-size: 20px;
   width: 20px;
   height: 20px;
-}
-
-@media (max-width: 350px) {
-  .choice-of-school-subjects-container-active .choice-of-school-subjects {
-    margin: 20px;
-  }
 }
 
 .choice-of-school-subjects-container-active .choice-of-school-subjects .selection-list-btn-container {
