--- a/style.scss
+++ b/style.scss
@@ -159,12 +159,12 @@ body {
     justify-content: center;
     align-items: center;
     .choice-of-school-subjects {
-        height: 100vh;
+        height: 96%;
         max-width: 600px;
         overflow: auto;
         background-color: white;
         border-radius: 10px;
-        margin: 10px 10px 0px 10px;
+        margin: 10px;
         h2 {
             color: #0099ff;
             text-align: center;
@@ -194,9 +194,6 @@ body {
                     height: 20px;
                 }
             }
-        }
-        @media (max-width: 350px) {
-            margin: 20px;
         }
         .selection-list-btn-container {
             margin-top: 15px;
@@ -307,7 +304,6 @@ body {
                 background-color: #01325e;
             }
         }
-
 
         .adding-school-grades {
             display: flex;
