--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ body {
         overflow: auto;
         background-color: white;
         border-radius: 10px;
-        margin: 10px;
+        margin: 0px 10px 0px 10px;
         h2 {
             color: #0099ff;
             text-align: center;
