--- a/style.css
+++ b/style.css
@@ -352,6 +352,7 @@ body {
 
 .content .table .name-of-the-school-subject h3 {
   max-width: 242px;
+  word-wrap: break-word;
 }
 
 @media (max-width: 360px) {
