--- a/style.css
+++ b/style.css
@@ -438,23 +438,28 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100px;
+  width: 80px;
   position: relative;
   left: 10px;
 }
 
 .content .table .rating-and-weight .school-grade-value {
+  text-align: center;
   border: none;
   border: 2px solid #0099ff;
   height: 50%;
-  text-align: center;
   font-size: 15px;
   background-color: #80ccff9c;
 }
 
+.content .table .rating-and-weight input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .content .table .rating-and-weight .weight-of-the-rating-value {
-  font-size: 15px;
   text-align: center;
+  font-size: 15px;
   border: none;
   height: 50%;
   border: 1px 2px 0px 1px solid #0099ff;
@@ -466,18 +471,26 @@ body {
 
 .content .table .rating-and-weight input::-webkit-input-placeholder {
   color: #006CCB;
+  text-align: left;
+  padding-left: 10px;
 }
 
 .content .table .rating-and-weight input:-ms-input-placeholder {
   color: #006CCB;
+  text-align: left;
+  padding-left: 10px;
 }
 
 .content .table .rating-and-weight input::-ms-input-placeholder {
   color: #006CCB;
+  text-align: left;
+  padding-left: 10px;
 }
 
 .content .table .rating-and-weight input::placeholder {
   color: #006CCB;
+  text-align: left;
+  padding-left: 10px;
 }
 
 .content .table .adding-btn {
